--- a/scss/partials/components/_latest.scss
+++ b/scss/partials/components/_latest.scss
@@ -175,7 +175,7 @@
             }
             .author{
                 border-top: 1px solid rgba(0, 0, 0, 0.3);
-                margin: 10px 5px 0 5px;
+                margin: 40px 5px 0 5px;
                 padding: 10px;
                 display: flex;
                 align-items: center;
